<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CineMates20</string>
    <string name="login">Login</string>
    <string name="singup">Sing-Up</string>
    <string name="login_later">Login later</string>
    <string name="eMail">e-Mail</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="forgotPassword">Forgot password ?</string>
    <string name="loginLabel">LOGIN</string>
    <string name="insert_email">e-Mail *</string>
    <string name="insert_username">Nickname *</string>
    <string name="insert_birthdate">Birth date *</string>
    <string name="insert_password">Password *</string>
    <string name="repeat_password">Repeat password *</string>
    <string name="singUp">Sing Up</string>
    <string name="requiredField">* Required field</string>
    <string name="singupLabel">SING UP</string>
    <string name="insert_name">Name *</string>
    <string name="insert_surname">Surname *</string>
    <string name="error_empty_field">Fill in all required fields before continuing</string>
    <string name="error_not_matched_password">WARNING ! The passwords entered do not match</string>
    <string name="verification_code">Verification Code</string>
    <string name="error_verification_code_null">Enter the verification received via e-Mail code before continuing</string>
    <string name="already_have_code">Already have verification code</string>
    <string name="email_already_code">Insert e-Mail to continue</string>
    <string name="success_singup_label">SING-UP SUCCESS</string>
    <string name="success_singup_msg">Sing-Up was successful! You will be redirected to the main login page</string>
    <string name="error_singup_label">SING-UP ERROR</string>
    <string name="error_verification_code">The verification code inserted is wrong!</string>
    <string name="error_singin_label">LOG-IN ERROR</string>
    <string name="send_new_verification_code">Resend verification code</string>
    <string name="resend_verification_code_success_label">CODE SENT WITH SUCCESS</string>
    <string name="resend_verification_code_success_msg">A new verification code has been sent to the e-mail address indicated during registration.</string>
    <string name="resend_verification_code_error_label">SENDING NEW CODE ERROR</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="privacy_policy_label">Privacy policy</string>
    <string name="privacy_policy">By registering on the CineMates20 platform, you accept our privacy policy, compliant with the GDPR, regarding the processing of the data provided.</string>
    <string name="movie_label">Movie</string>
    <string name="users_label">Users</string>
    <string name="notifications_label">Notifications</string>
    <string name="profile_label">Profile</string>
    <string name="denied_access_label">Denied access</string>
    <string name="denied_access">This feature is only available for authenticated users.</string>
    <string name="continue_not_uthenticated">Continue without authentication</string>
    <string name="next">Next</string>
    <string name="passwrod_rule">The password must be at least 8 characters and must contain: at least one uppercase, at least one lowercase, at least one special character</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="recovery_password_label">PASSWORD RECOVERY</string>
    <string name="recovery_password_error_label">PASSWORD RECOVERY ERROR</string>
    <string name="new_password">New Password *</string>
    <string name="reset_password">Reset password</string>
    <string name="send_verification_code_forgot_password_success_msg">A verification code has been sent to the indicated e-mail address. Enter this code on the next page to reset your password</string>
    <string name="recovery_password_success_label">Password reset</string>
    <string name="recovery_password_success_msg">The password was successfully reset! Please login to start discovering movies.</string>
    <string name="data_modify">Modify Data</string>
    <string name="friends_list">Friends List</string>
    <string name="reviews_made">Reviews Made</string>
    <string name="logout">Logout</string>
    <string name="edit_psw">Edit Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_data_label">Edit User Data</string>
    <string name="edit_nickname">Edit Nickname</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_surname">Edit Surname</string>
    <string name="edit_bio">Edit Biography</string>
    <string name="edit_data_error_label">EDIT DATA ERROR</string>
    <string name="edit_data_error_msg">The data modification was not successful. The changes made will be canceled.</string>
    <string name="edit_data_success_label">EDIT DATA CHANGES</string>
    <string name="edit_data_success_msg">Your data has been successfully modified.</string>
    <string name="edit_password_label">Edit Password</string>
    <string name="old_password">Old password *</string>
    <string name="new_password_repeat">Repeat New Password *</string>
    <string name="edit_password_error">Edit Password Error</string>
    <string name="edit_password_success_label">Password Changed</string>
    <string name="edit_password_success_msg">Your password has been successfully changed !</string>
    <string name="double_click_to_exit">Please click BACK again to exit</string>
    <string name="permission_denied">Gallery access permision denied.</string>
    <string name="write_review">Write Review</string>
    <string name="view_review">View Review List</string>
    <string name="share_film">Share Movie</string>
    <string name="movie_title">Name</string>
    <string name="movie_years">Year</string>
    <string name="movie_duration">Duration (minutes)</string>
    <string name="movie_genres">Genre</string>
    <string name="country_production">Country</string>
    <string name="cast">Cast</string>
    <string name="director">Director</string>
    <string name="publish_review">Publish Review</string>
    <string name="review_vote_label">Rating</string>
    <string name="error_not_authenticated_label">USER NOT AUTHENTICATED</string>
    <string name="error_not_authenticated_msg">This function is reserved to authenticted user. Pleas, sing-in to continue.</string>
    <string name="error_review_label">Review Error</string>
    <string name="error_not_valid_review_vote">Inserted vote is not valid: pleas insert new vote between 0 and 100</string>
    <string name="success_review_publish_label">Review Posted</string>
    <string name="success_review_publish">Review published successfully</string>
    <string name="error_review_already_posted">You have already posted a review fo this movie.</string>
    <string name="error_review_publish">Error while posting the review.</string>
    <string name="edit_review">Edit Review</string>
    <string name="delete_review">Delete Review</string>
    <string name="delete_review_msg">Are you sure to delete this review ?</string>
    <string name="edit_review_success">Review edited successful</string>
    <string name="edit_review_success_label">Edit Success</string>
    <string name="avarge_rating_movie">Avarge Rating</string>
    <string name="whithespace_error">The name and nickname fields cannot contain the space character: they must be a single word</string>
    <string name="connection_requests">Connection Requests</string>
    <string name="remove_friend_label">Remove Friend</string>
    <string name="remove_friend_msg">Are you sure you want to remove this user from your friends list? We will not notify the removed user.</string>
    <string name="set_movie_filter">Set Search Filter</string>
    <string name="set_filter">Imposta Filtri</string>
    <string name="actor">Actor / Actress</string>
    <string name="share_label">Share Movie</string>
    <string name="share">Share</string>
    <string name="error_share_label">Movie Sharing Error</string>
    <string name="error_share">Unable to Share: This movie has already been shared with this user.</string>
    <string name="wrute_yout_review">Write your review here</string>
    <string name="error_email_format">e-Mail format is wrong.</string>

    <!-- notifications message -->
    <string name="connection_request_sended_notify_msg">sent you a connection request.</string>
    <string name="connection_request_accepted">accepted your connection request</string>
    <string name="connection_request_refused">refused your connection request</string>
    <string name="movie_shared">recommends the following movie:</string>

    <!-- key -->
    <string name="APIkey_the_movie_database">62e0498d993a417c6db9e59ecf5862b3</string>
</resources>