<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.fragments.MovieFilterFragment">

    <include
        android:id="@+id/toolbar_movie_filter_fragment"
        layout="@layout/toolbar_fragments"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10sp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/director" />

                <EditText
                    android:id="@+id/director_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_margin="10sp"
                    android:background="@drawable/textfield_rounded_corner"
                    android:spinnerMode="dropdown"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/movie_genres" />

                <Spinner
                    android:id="@+id/genre_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_margin="10sp"
                    android:background="@drawable/textfield_rounded_corner"
                    android:spinnerMode="dropdown"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/movie_years" />

                <EditText
                    android:id="@+id/year_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10sp"
                    android:inputType="number"
                    android:background="@drawable/textfield_rounded_corner"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/movie_duration" />

                <EditText
                    android:id="@+id/duration_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10sp"
                    android:inputType="number"
                    android:background="@drawable/textfield_rounded_corner"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/actor" />

                <EditText
                    android:id="@+id/actor_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_margin="10sp"
                    android:background="@drawable/textfield_rounded_corner"
                    android:spinnerMode="dropdown"/>

                <android.widget.Button
                    android:id="@+id/set_filter_button"
                    android:layout_width="210sp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:text="@string/set_filter"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>